# uno

./: .env_dev  .env_test  .gitignore  .windsurfrules  DI_ISSUES.md  DUPLICATE_CODE.md  DUPLICATE_CODE_DETAILED.md  EVENT_REFACTOR.md  INTEGRATION.md  LICENSE  LOGGER.md  LOGGER_ISSUES.md  OVERALL_STATUS.md  README.md  REFACTOR.md  SAGA_USAGE.md  UNO_REFACTOR.md  context.py  event_sourcing_prompt.md  idomatic_uno.md  main.py  mypy.ini  postgres_event_store_explanation.md  pyproject.toml  setup_dev_environment.py
.github/workflows/: ci.yml  docs-validation.yml
benchmarks/: event_replay_benchmark.py
db/: postgres_bus_schema.sql  postgres_saga_store_schema.sql
docker/: Dockerfile  README.md  docker-compose-pgadmin.yaml  docker-compose.yaml  init-db.sh
docker/scripts/: download_pgvector.sh  init-db.sh  init-extensions.sh  install_pgvector.sh  rebuild.sh  setup_test_docker.sh  setup_with_docker.sh
docker/test/: docker-compose.yaml
docs/: GET_LOGGER.md  ONBOARDING.md  config_schema.md  di_testing.md  event_store_errors.md  events_upcasting.md  key_rotation.md
docs/config/: developer-guide.md  secure_values.md  security-guide.md  user-guide.md
docs/di/: OVERVIEW.md  advanced.md  best-practices.md  components.md  examples.md  index.md  overview.md  pre-warming.md  service-factories.md  service-lifecycle.md  testing.md  usage_patterns.md
docs/errors/: developer_guide.md  errors.md  index.md  user_guide.md
docs/event_bus/: cli.md  dead_letter_queue.md  production_deployment.md
docs/events/: EVENT_HANDLER_DISCOVERY.md  async_guidelines.md  events_upcasting.md  index.md  migration_guide.md
docs/examples_app/: domain_modeling.md
docs/injection/: api_reference.md  developer_guide.md  user_guide.md
docs/logging/: architecture.md  cli.md  configuration.md  error_context.md  index.md  migration_guide.md  monitoring_integration.md  performance.md  structured_logging.md  tracing.md  usage_patterns.md
domain/: _base_types.py  aggregate.py  bounded_context.py  repository.py  value_object.py
errors/: base.py
events/: __init__.py  _base.py  bus.py  command.py  decorators.py  discovery.py  event_store.py  postgres_event_store.py  sagas.py  unit_of_work.py
examples/: README.md  auto_discovery_example.py  cache_usage.py  config_schema_example.py  config_ui_integration.py  ddd_repository_pattern.py  event_middleware_example.py  event_middleware_with_di.py  inventory_upcasting.py  middleware_chain_validation.py  middleware_isolated_test.py  minimal_middleware_test.py  schema_ui_extension.py  standalone_auto_discovery.py  standalone_middleware_example.py  standalone_middleware_test.py
examples/app/: README.md  __main__.py  app_saga_demo.py
examples/tests/: test_upcasting_registry.py
guidelines/: pydantic_v2_migration.py
infrastructure/database/: config.py  db.py  enhanced_connection_pool.py  enhanced_pool_session.py  enhanced_session.py  errors.py  optimizer_metrics.py  pg_optimizer_strategies.py  provider.py  query_cache.py  query_optimizer.py  repository.py  session.py
infrastructure/sql/: config.py  emitter.py  registry.py
legacy_domain/: entity.py  event_sourced_repository.py
legacy_events_and_domain/event_processing/: injection.py
legacy_files/application/: __init__.py  errors.py
legacy_files/commands/: __init__.py  di.py  errors.py  handler.py  protocols.py
legacy_files/domain/: ISSUES.md  __init__.py  aggregate.py  config.py  di.py  entity.py  errors.py  event_sourced_aggregate.py  event_sourced_repository.py  protocols.py  value_object.py
legacy_files/event_processing/: __init__.py  config.py  context.py  correlation.py  registry.py
legacy_files/event_sourcing/: __init__.py
legacy_files/event_storage/: __init__.py
legacy_files/events/: ISSUES.md  __init__.py  errors.py
legacy_files/sql/: __init__.py  classes.py  config.py  connection.py  engine.py  interfaces.py  logger.py  migration.py  observers.py  security.py  services.py  statement.py  testing.py  transaction.py  validator.py
legcay_events/: event_store_manager.py  middleware.py  projections.py  snapshots.py
refactor_docs/: analysis.md
scripts/: test_dead_letter.py
sql/: __init__.py  documentation.py  emitter.py  engine.py  errors.py  interfaces.py  logger.py  monitor.py  observers.py  performance.py  registry.py  registry_patch.py  transaction.py  validator.py
sql/builders/: __init__.py  function.py  index.py  trigger.py
sql/emitters/: __init__.py  event_store.py  function_emitter.py  graph.py  security.py  table.py  triggers.py
sql/services/: sql_emitter_factory_service.py  sql_execution_service.py
src/: add_spdx_headers.sh  simple_import_test.py  test_no_result.py  test_restructure.py
src/scripts/: README.md  README_logging_migration.md  check_di_logger_config.py  createdb.py  createquerypaths.py  createsuperuser.py  db_init.py  docker_rebuild.py  docker_utils.py  dropdb.py  migrate_logger_service.py  migrations.py  postgres_extensions.py  todo_demo.py  update_di_logger_config.py  verify_logger_migration.py  visualize_contexts.py
src/uno/: async_utils.py  base.py  base_model.py  cli.py  middleware_factory.py  settings.py  types.py  utils.py
tests/: conftest.py  conftest_protocols.py  test_di_core.py  test_errors.py  test_event_logging.py  test_event_sourcing.py  test_provider.py  test_scoped_container.py  test_snapshots.py
tests/config/: test_config_base.py  test_di.py  test_key_history.py  test_key_policies.py  test_key_rotation.py  test_key_scheduler.py  test_schema.py  test_secure_config.py  test_secure_config_comprehensive.py
tests/core/: test_base_event.py
tests/di/: test_additional_errors.py  test_basic_registration.py  test_container.py  test_container_disposal.py  test_container_errors.py  test_error_handling.py  test_event_services_registration.py  test_factory_edge_cases.py  test_factory_methods.py  test_factory_registration.py  (+7 more)
tools/: find_deprecated_pydantic.py  refactor_logging.py
ui/: lit-webawesome-guide.md  schema-driven-ui-guide.md  vanilla-lit-webawesome-guide.md  vanillajs-component-example.txt  vanillajs-html-example.txt
(+1021 files in other folders)
