# SPDX-FileCopyrightText: 2024-present Richard Dahl <richard@dahl.us>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Basic Project Information
[project]
name = "uno"
dynamic = ["version"]
description = 'uno is not an orm'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [{ name = "Richard Dahl", email = "richard@dahl.us" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "asyncio>=3.4.3",
  "alembic>=1.13.1",
  "aiosqlite>=0.21.0",
  "babel>=2.14.0",
  "fastapi[standard]>=0.109.0",
  "jinja2>=3.1.3",
  "PyJWT>=2.8.0",
  "psycopg[binary]>=3.1.18",
  "asyncpg>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "python-multipart>=0.0.6",
  "psutil>=5.9.7",
  "pytz>=2023.3.post1",
  "uvicorn[standard]>=0.25.0",
  "sqlalchemy[asyncio]>=2.0.25",
  "aiohttp>=3.9.1",
  "croniter>=2.0.1",
  "structlog>=24.1.0",
  "rich>=13.6.0",
  "httpx>=0.25.2",
  "prometheus_client>=0.20.0",
  "redis>=5.0.1",
  "msgspec>=0.18.4",
  "strenum>=0.4.15",
  "tenacity>=8.2.3",
  "cachetools>=5.3.2",
  "graphviz>=0.20.1",
  "cryptography>=40.0.1",
]

[project.urls]
Documentation = "https://github.com/richarddahl/notorm#readme"
Issues = "https://github.com/richarddahl/notorm/issues"
Source = "https://github.com/richarddahl/notorm"

[project.scripts]
ddd-lib = "src.scripts.ddd_lib:main"

[tool.hatch.version]
path = "src/uno/__about__.py"

#GRAPHIZ 
# Basic usage - generates a PNG file named context_map.png
#python src/scripts/visualize_contexts.py
# Generate and view the context map in your browser
#python src/scripts/visualize_contexts.py --view
# Generate in SVG format
#python src/scripts/visualize_contexts.py --format svg
# Analyze dependencies between contexts
#python src/scripts/visualize_contexts.py --analyze
# Custom output path
#python src/scripts/visualize_contexts.py --output docs/architecture/context_map

# Default Environment
[tool.hatch.envs.default.scripts]
main = "uvicorn main:app {args: --reload}"
createdb = "python src/scripts/createdb.py"
dropdb = "python src/scripts/dropdb.py"
createsuperuser = "python src/scripts/createsuperuser.py"
createquerypaths = "python src/scripts/createquerypaths.py"
vector-demo = "python src/scripts/vector_demo.py {args}"
migrate-init = "python src/scripts/migrations.py init"
migrate-generate = "python src/scripts/migrations.py generate {args}"
migrate-up = "python src/scripts/migrations.py upgrade {args:head}"
migrate-down = "python src/scripts/migrations.py downgrade {args}"
migrate-current = "python src/scripts/migrations.py current"
migrate-history = "python src/scripts/migrations.py history"
migrate-revisions = "python src/scripts/migrations.py revisions"


#Development Environment
[tool.hatch.envs.dev.scripts]
main = "ENV=dev uvicorn main:app {args: --reload}"
createdb = "ENV=dev python src/scripts/createdb.py"
dropdb = "ENV=dev python src/scripts/dropdb.py"
createsuperuser = "ENV=dev python src/scripts/createsuperuser.py"
createquerypaths = "ENV=dev python src/scripts/createquerypaths.py"
vector-demo = "ENV=dev python src/scripts/vector_demo.py {args}"
migrate-init = "ENV=dev python src/scripts/migrations.py init"
migrate-generate = "ENV=dev python src/scripts/migrations.py generate {args}"
migrate-up = "ENV=dev python src/scripts/migrations.py upgrade {args:head}"
migrate-down = "ENV=dev python src/scripts/migrations.py downgrade {args}"
migrate-current = "ENV=dev python src/scripts/migrations.py current"
migrate-history = "ENV=dev python src/scripts/migrations.py history"
migrate-revisions = "ENV=dev python src/scripts/migrations.py revisions"
pg-extensions = "python -m src.scripts.postgres_extensions {args}"
docker-setup = "python -m src.scripts.setup_environment --env dev"
docker-rebuild = "python -m src.scripts.docker_rebuild --env dev"
app = ["ENV=dev", "docker-setup", "main"]
vector-demo-setup = ["ENV=dev", "docker-setup", "vector-demo setup"]


# Testing Environment
[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.1",
  "pytest-benchmark>=4.0.0",
  "coverage[toml]>=7.4.0",
  "httpx>=0.25.2",
  "requests>=2.31.0",
  "factory_boy>=3.3.0",
  "pytest-mock>=3.12.0",
  "hypothesis>=6.98.0",
  "bandit>=1.7.7",
]

[tool.coverage.run]
source_pkgs = ["uno", "tests"]
branch = true
parallel = true
omit = ["src/uno/__about__.py"]

[tool.coverage.paths]
uno = ["src/uno", "*/uno/src/uno"]
tests = ["tests", "*/uno/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.test.scripts]
test = "ENV=test pytest --tb=no --capture=tee-sys --show-capture=all {args}"
testv = "ENV=test pytest --tb=short --capture=tee-sys --show-capture=all {args}"
testvv = "ENV=test pytest -vv --capture=tee-sys --show-capture=all {args}"
testV = "ENV=test pytest --capture=tee-sys --show-capture=all {args}"
test-examples = "ENV=test PYTHONPATH=src pytest examples/app/tests/ --tb=no --capture=tee-sys --show-capture=all"
test-examplesV = "ENV=test PYTHONPATH=src pytest examples/app/tests/ --capture=tee-sys --show-capture=all"
test-cov = "ENV=test coverage run -m pytest"
cov-report = ["ENV=test", "- coverage combine", "coverage report"]
cov = ["ENV=test", "test-cov", "cov-report"]
benchmark = "ENV=test pytest tests/benchmarks/ {args}"
pg-extensions = "python -m src.scripts.postgres_extensions {args}"
createdb = "ENV=test python src/scripts/createdb.py"
dropdb = "ENV=test python src/scripts/dropdb.py"
migrate-init = "ENV=test python src/scripts/migrations.py init"
migrate-generate = "ENV=test python src/scripts/migrations.py generate {args}"
migrate-up = "ENV=test python src/scripts/migrations.py upgrade {args:head}"
migrate-down = "ENV=test python src/scripts/migrations.py downgrade {args}"
migrate-current = "ENV=test python src/scripts/migrations.py current"
migrate-history = "ENV=test python src/scripts/migrations.py history"
migrate-revisions = "ENV=test python src/scripts/migrations.py revisions"
docker-setup = "python -m src.scripts.setup_environment --env test"
docker-rebuild = "python -m src.scripts.docker_rebuild --env test"
all = ["ENV=test", "docker-setup", "test"]

[tool.pytest.ini_options]
markers = [
  "asyncio: mark a test as an asyncio test (using pytest-asyncio)",
  "benchmark: mark test as a performance benchmark",
  "pgvector: mark test as requiring pgvector extension",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]


# Documentation Environement
[tool.hatch.envs.docs]
dependencies = [
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.5.3",
  "mkdocstrings>=0.15.0",
  "mkdocs-autorefs>=0.4.1",
  "mkdocs-material-extensions>=1.1.1",
  "mkdocstrings-python>=1.7.3",
  "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8001"

# Lint Environment
[tool.hatch.envs.lint]
dependencies = [
  "ruff>=0.2.1",
  "mypy>=1.8.0",
]

[tool.hatch.envs.lint.scripts]
lint = "ruff check src/uno tests"
typecheck = "mypy --install-types --non-interactive src/uno tests"
all = ["lint", "typecheck"]

# Types Environment
[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.8.0", "ruff>=0.2.1"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/uno tests}"
lint = "ruff check {args:src/uno tests}"
format = "ruff format {args:src/uno tests}"
all = ["check", "lint", "format"]

# MyPy Configuration
[tool.mypy]
python_version = "3.13"
plugins = ["sqlalchemy.ext.mypy.plugin"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = "(?x)(migrations|migrations/versions)"

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true
warn_unused_configs = true

disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "tests.integration.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# Ruff configuration
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # typecheck
    "RUF", # Ruff-specific rules
    "ERA", # eradicate
    "PL",  # pylint
    "S",   # bandit
    "DTZ", # flake8-datetimez
    "PT"   # flake8-pytest-style
]
ignore = [
    "E501",  # Line too long
    "E203",  # Whitespace before ':'
    "N806",  # Lowercase variable names in functions
    "N815",  # MixedCase variable in class scope
    "N816",  # MixedCase variable in global scope
    "N999",  # Non-lowercase variable in function
    "PLR2004",  # Magic number used in comparison
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "S101",  # Use of assert detected
    "S106",  # Possible hardcoded password
    "S113",  # Probable use of requests with no timeout
    "S301",  # Use of pickle
    "S311",  # Standard pseudo-random generators
    "S603",  # Subprocess call with shell=True
    "S607"   # Starting a process with a partial executable path
]

[tool.ruff.lint.isort]
known-first-party = ["uno"]
combine-as-imports = true
force-single-line = false
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# PyPy Configuration
[tool.pypy]
python_version = "3.13"
jit = true
jit_threshold = 1000
jit_trace_limit = 6000
gc_nursery_size = "4M"
gc_min_threshold = 700
gc_increment_step = 3
gc_heap_size = "1G"
debug = false
debug_print_bytecode = false
optimize = 2
shared_memory = true
portable = false
cpyext = true

[tool.pypy.benchmark]
compare_with_cpython = true
iterations = 10
warmup = 3
